# Leaf-Chat

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  compile_commands.json
Leaf-chat/Network/include/: Client.cpp  Client.h  Network.cpp  Network.h  Server.cpp  Server.h
Leaf-chat/include/: Application.h  dynamicText.h  messenger.h
Leaf-chat/scr/: Application.cpp  Entrypoint.cpp  dynamicText.cpp  messenger.cpp
